Fix text alignment in next page

--- a/styles/_nextPage.scss
+++ b/styles/_nextPage.scss
@@ -52,8 +52,9 @@
         align-items: center;
 
         .continue-text {
-          text-align: center;
           margin-bottom: .5em;
+          margin-right: 1em;
+          align-self: flex-end;
       }
 
       .pill.next-btn {
